[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.75"
bitflags = "2.4.1"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
log = "0.4"
parking_lot = "0.12.1"
rayon = "1.8.0"
regex = "1.10.2"
